feat: added admin routes
